# astrophone

./: Cargo.toml  README.md  TODO  astrophone.config.toml
astrophone-client/: Cargo.toml  build.rs
astrophone-client/src/: main.rs
astrophone-server/: Cargo.toml
astrophone-server/src/: logging.rs  main.rs  p.rs  rtcp.rs  types.rs
doc/: H2250.asn1  H245.asn1  linphone-invite.txt
proto/: asn1.proto  callsig.proto  mediacontrol.proto  mtsid.proto
