[package]
name = "astrophone-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "astrophone-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
log4rs = "1.2.0"
log = "0.4"
rand = "0.8.5"
chrono = "0.4.26"
ulid = "1.1.0"
cow-utils = "0.1.3"
rtp-rs = "0.6.0"
tokio-util = "0.7.12"
audio-codec-algorithms = "0.6.0"
cpal = "0.15.3"
ringbuf = "0.4.7"
bytemuck = { version = "1.14.1", features = ["derive", "must_cast"] }
rsip = "0.4.0"
local-ip-address = "0.6.3"
sdp-rs = "0.2.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
